kubernetes/apps/appsplatform/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: appsplatform
  labels:
    kustomize.toolkit.fluxcd.io/prune: disabled
    istio-injection: enabled
