kubernetes/apps/appsplatform/bookinfo-ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: appsplatform
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - bookinfo.selad.net
      port:
        name: http
        number: 80
        protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bookinfo-gateway
  namespace: appsplatform
spec:
  gateways:
    - bookinfo-gateway
  hosts:
    - bookinfo.selad.net
  http:
    - match:
        - uri:
            prefix: /outpost.goauthentik.io
      route:
        - destination:
            host: authentik.default.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            exact: /productpage
        - uri:
            prefix: /static
        - uri:
            exact: /login
        - uri:
            exact: /logout
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: productpage
            port:
              number: 9080
